...

    Column(modifier = Modifier.fillMaxWidth()) {
        Spacer(modifier = modifier.height(30.dp))
        OutlinedTextField(
            modifier = Modifier
                .fillMaxWidth(0.9f)
                .testTag("NameTF"),
            value = name,
            onValueChange = { onEvent(RegisterEvent.EnteredName(it)) },
            label = { Text("Nome") },
            leadingIcon = {
                Icon(
                    modifier = Modifier.padding(end = 10.dp),
...
        Spacer(modifier = modifier.height(10.dp))

        OutlinedTextField(
            modifier = Modifier
                .fillMaxWidth(0.9f)
                .height(150.dp)
                .testTag("DescriptionTF"),
            value = description,
            onValueChange = { onEvent(RegisterEvent.EnteredDescription(it)) },
            label = { Text("Descrição") },
            leadingIcon = {
                Icon(
                    modifier = Modifier.padding(end = 10.dp),
...
                    .onFocusEvent {
                        if (it.isFocused) {
                            showDatePicker = true
                            focusManager.clearFocus(force = true)
                        }
                    }
                    .testTag("DateTF"),
                value = selectedDate,
                onValueChange = { onEvent(RegisterEvent.EnteredDate(it)) },
                label = { Text("Data") },
                leadingIcon = {
                    Icon(
                        modifier = Modifier.padding(end = 10.dp),
...
                    .onFocusEvent {
                        if (it.isFocused) {
                            showTimePicker = true
                            focusManager.clearFocus(force = true)
                        }
                    }
                    .testTag("TimeTF"),
                value = selectedTime,
                onValueChange = { onEvent(RegisterEvent.EnteredTime(it)) },
                label = { Text("Horário") },
                leadingIcon = {
                    Icon(
                        modifier = Modifier.padding(end = 10.dp),
...
                .width(300.dp)
                .padding(top = 20.dp)
                .height(50.dp),
            shape = RoundedCornerShape(10.dp),
            colors = ButtonDefaults.buttonColors(primaryColor)
        ) {
            Text(text = "Pomodoro")
        }

        Spacer(modifier = modifier.height(40.dp))
    }
}

...
            .testTag("btnConfirmar"),
        onClick = { onInsertTask() },
        shape = RoundedCornerShape(10.dp),
        colors = ButtonDefaults.buttonColors(primaryColor)
    ) {
        Text(
            text = "Confirmar",
            fontSize = 15.sp
        )
    }
}

@Composable
...
